--- a/InnovateFPGA2021-WebApp/appsettings.Development.json
+++ b/InnovateFPGA2021-WebApp/appsettings.Development.json
@@ -8,6 +8,13 @@
   },
   "AllowedHosts": "*",
   "Azure": {
+    "IoTHub": {
+      "ConnectionString": ""
+    },
+    "Dps": {
+      "IdScope": "",
+      "ConnectionString": ""
+    },
     "Signalr": {
       "ConnectionString": ""
     },
